# ds_materials

./:  Jagdamba Enterprises(Mewat).csv   PURAN MAL & CO (Narnaul).csv   Parkash Sales Corporation (Gurgaon).csv   Rao Enterprises (Gurgaon).csv  .gitignore  0.live_project_links.docx  1.csv  1.xlsx  10.cloud_course.lnk  2.csv  Basic Web Scraping Questions.docx  Python Interview Questions.docx  README.md  all_project_list - Google Docs.url  desktop.ini  ds_materials - Shortcut.lnk  erferdfdfdf  git_github.pptx  interwiew_questions_np_pd_m_s_flask.docx  kpi_fill.docx  module_10_cloud.pptx - Shortcut.lnk  module_1_Excel Beg to Adv.pptx  module_1_Excel Beg to Adv.pptx - Shortcut.lnk  module_2_MySql1.pptx  module_2_MySql1.pptx - Shortcut.lnk  module_3_powerbi.pptx  module_3_powerbi.pptx - Shortcut.lnk  module_4_Tableau.pptx - Shortcut.lnk  module_5_python_beg_to_advance.pptx - Shortcut.lnk  module_7_dwd_stats_advance.pptx - Shortcut.lnk  module_8_Machine learning.pptx - Shortcut.lnk  module_9_deep learning.pptx - Shortcut.lnk  project_evaluation_feedback.docx  sql_install.docx  supervised and Unsupervised learning.pptx  ~$nal Interview Questions_mock.docx  ~$terwiew_questions_np_pd_m_s_flask.docx  ~WRL1812.tmp
0.git_github/: git_commands.txt  git_github.pptx
1.0excel/: 0.Excel All syllabus topics - Google Docs.url  Excel Beg to Adv.pptx  Sample_Superstore.xlsx  formulas_excel_implement_data - Copy (2).xlsx
1.1_resume/: Data Scientist Resume.docx  Project_eda.ipynb  interview.txt  (+12 more)
9.Deep_learning/class/in1class/7agenticai/job-hunter-agent/: agent.py  bot.py  frontend_steamlit.py  instructions.doc  pyproject.toml  steps.md
projects/CrewAI_Masterclass-main/demo/: README.md  pyproject.toml  steps.md
projects/CrewAI_Masterclass-main/demo/blogs/: blog.md
projects/CrewAI_Masterclass-main/demo/src/demo/: crew.py  main.py
projects/CrewAI_Masterclass-main/demo/src/demo/config/: agents.yaml
projects/CrewAI_Masterclass-main/research_and_blog_crew/: README.md  pyproject.toml
projects/CrewAI_Masterclass-main/research_and_blog_crew/blogs/: blog.md
projects/CrewAI_Masterclass-main/research_and_blog_crew/src/reaseach_and_blog_crew/: crew.py  main.py
projects/CrewAI_Masterclass-main/research_and_blog_crew/src/reaseach_and_blog_crew/config/: tasks.yaml
(+2762 files in other folders)
