[project]
name = "demo"
version = "0.1.0"
description = "demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
demo = "demo.main:run"
run_crew = "demo.main:run"
train = "demo.main:train"
replay = "demo.main:replay"
test = "demo.main:test"
run_with_trigger = "demo.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
