[project]
name = "reaseach_and_blog_crew"
version = "0.1.0"
description = "reaseach_and_blog_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.3.0"
]

[project.scripts]
reaseach_and_blog_crew = "reaseach_and_blog_crew.main:run"
run_crew = "reaseach_and_blog_crew.main:run"
train = "reaseach_and_blog_crew.main:train"
replay = "reaseach_and_blog_crew.main:replay"
test = "reaseach_and_blog_crew.main:test"
run_with_trigger = "reaseach_and_blog_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
