[project]
name = "job-hunter-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "pdfplumber>=0.11.10",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "requests>=2.34.2",
    "tavily-python>=0.7.26",
]
